[package]
name = "annoyancube"
version = "0.1.0"
edition = "2025"
[dependencies]
bevy = "0.17" # make sure this is the latest version
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"