[package]
name = "annoyancube"
version = "0.1.0"
edition = "2025"
[dependencies]
bevy = "0.17" # make sure this is the latest version
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[profile.wasm-release]
# Default to release profile values.
inherits = "release"
opt-level = "s"
strip = "debuginfo"